<?xml version="1.0"?>
<package format="3">
  <name>vector_ros_driver</name>
  <version>2.0.0</version>
  <description>Unofficial ROS 2 package for Anki Vector home robot</description>

  <maintainer email="beta_b0t@yahoo.com">beta_b0t</maintainer>
  <maintainer email="hunterlallen@protonmail.com">Hunter L. Allen</maintainer>

  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcutils</depend>

  <!-- <build_depend>actionlib_msgs</build_depend> -->
  <!-- <build_depend>rostest</build_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
